--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -317,6 +317,9 @@
     <ClCompile Include="Engine\Renderer\EffectRenderer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Editor\Primitive\PrimitiveMeshData.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -429,6 +432,7 @@
     <ClInclude Include="Engine\Core\Component\PrimitiveMeshComponent.h" />
     <ClInclude Include="Engine\Core\Component\Store\PrimitiveMeshStore.h" />
     <ClInclude Include="Engine\Renderer\EffectRenderer.h" />
+    <ClInclude Include="Engine\Editor\Primitive\PrimitiveMeshData.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
