uvScrollを行えるplaneの作成

--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -282,6 +282,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Engine\Utility\UVHelper.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Algorithm\StateTimer.cpp">
       <SubType>
       </SubType>
@@ -561,6 +565,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClInclude>
     <ClInclude Include="Engine\Scene\Light\LightManager.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Engine\Utility\UVHelper.h">
       <SubType>
       </SubType>
     </ClInclude>
