--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -326,6 +326,9 @@
     <ClCompile Include="Engine\Utility\UVHelper.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Utility\SimpleAnimation.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -364,7 +367,7 @@
     <ClInclude Include="Engine\Renderer\MeshRenderer.h" />
     <ClInclude Include="Lib\Adapter\Easing.h" />
     <ClInclude Include="Lib\Adapter\JsonAdapter.h" />
-    <ClInclude Include="Lib\Adapter\Random.h" />
+    <ClInclude Include="Lib\Adapter\RandomGenerator.h" />
     <ClInclude Include="Lib\MathUtils\Matrix4x4.h" />
     <ClInclude Include="Lib\MathUtils\Quaternion.h" />
     <ClInclude Include="Lib\MathUtils\Vector2.h" />
@@ -441,6 +444,7 @@
     <ClInclude Include="Engine\Editor\Primitive\PrimitiveMeshData.h" />
     <ClInclude Include="Engine\Editor\Primitive\PrimitiveMeshTool.h" />
     <ClInclude Include="Engine\Utility\UVHelper.h" />
+    <ClInclude Include="Engine\Utility\SimpleAnimation.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
