--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -300,7 +300,7 @@ DockSpace               ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1080 S
       DockNode          ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
         DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=881,525 Split=X Selected=0xD1EB2482
           DockNode      ID=0x00000010 Parent=0x0000000A SizeRef=1231,676 Split=Y Selected=0xD1EB2482
-            DockNode    ID=0x00000008 Parent=0x00000010 SizeRef=1136,731 CentralNode=1 Selected=0x1E7E18E3
+            DockNode    ID=0x00000008 Parent=0x00000010 SizeRef=1136,731 CentralNode=1 Selected=0xD1EB2482
             DockNode    ID=0x00000009 Parent=0x00000010 SizeRef=1136,347 Split=X Selected=0xBABDAE5E
               DockNode  ID=0x0000000E Parent=0x00000009 SizeRef=333,401 Selected=0xEA83D666
               DockNode  ID=0x0000000F Parent=0x00000009 SizeRef=896,401 Selected=0xBABDAE5E
