--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -356,6 +356,15 @@
     <ClCompile Include="Game\Camera\FollowCamera.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Effect\PlayerEffectController.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Effect\PlayerBurstHitEffect.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Effect\PlayerCircleHitEffect.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -482,6 +491,9 @@
     <ClInclude Include="Game\Object3D\Player\Parts\PlayerSword.h" />
     <ClInclude Include="Game\Camera\FollowCamera.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\PlayerBehaviorType.h" />
+    <ClInclude Include="Game\Object3D\Player\Effect\PlayerEffectController.h" />
+    <ClInclude Include="Game\Object3D\Player\Effect\PlayerBurstHitEffect.h" />
+    <ClInclude Include="Game\Object3D\Player\Effect\PlayerCircleHitEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
