--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -402,6 +402,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Effect\PlayerLightningHitEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Object3D\Player\Parts\Base\BasePlayerParts.cpp">
       <SubType>
       </SubType>
@@ -748,6 +752,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClInclude>
     <ClInclude Include="Game\Object3D\Player\Effect\PlayerBurstHitEffect.h" />
+    <ClInclude Include="Game\Object3D\Player\Effect\PlayerLightningHitEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Game\Object3D\Player\Parts\Base\BasePlayerParts.h" />
     <ClInclude Include="Game\Object3D\Player\Parts\PlayerBody.h">
       <SubType>
