--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -365,6 +365,9 @@
     <ClCompile Include="Game\Object3D\Player\Effect\PlayerCircleHitEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Effect\PlayerLightningHitEffect.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -494,6 +497,7 @@
     <ClInclude Include="Game\Object3D\Player\Effect\PlayerEffectController.h" />
     <ClInclude Include="Game\Object3D\Player\Effect\PlayerBurstHitEffect.h" />
     <ClInclude Include="Game\Object3D\Player\Effect\PlayerCircleHitEffect.h" />
+    <ClInclude Include="Game\Object3D\Player\Effect\PlayerLightningHitEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
