--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -359,13 +359,10 @@
     <ClCompile Include="Game\Object3D\Player\Effect\PlayerEffectController.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Game\Object3D\Player\Effect\PlayerBurstHitEffect.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Game\Object3D\Player\Effect\PlayerCircleHitEffect.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Game\Object3D\Player\Effect\PlayerLightningHitEffect.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Base\BasePrimitiveEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -495,9 +492,8 @@
     <ClInclude Include="Game\Camera\FollowCamera.h" />
     <ClInclude Include="Game\Object3D\Player\Behavior\PlayerBehaviorType.h" />
     <ClInclude Include="Game\Object3D\Player\Effect\PlayerEffectController.h" />
-    <ClInclude Include="Game\Object3D\Player\Effect\PlayerBurstHitEffect.h" />
-    <ClInclude Include="Game\Object3D\Player\Effect\PlayerCircleHitEffect.h" />
     <ClInclude Include="Game\Object3D\Player\Effect\PlayerLightningHitEffect.h" />
+    <ClInclude Include="Game\Object3D\Base\BasePrimitiveEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
