--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -390,7 +390,60 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Game\Object3D\Player\Behavior\PlayerAttackBehavior.cpp">
+    <ClCompile Include="Game\Object3D\Player\Behavior\IPlayerBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyDashAttackBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyDashBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyFirstAttackBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyParryBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodySecondAttackBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyThirdAttackBehavior.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandDashAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandDashBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandFirstAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandParryBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandSecondAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandThirdAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordDashAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordDashBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordFirstAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordParryBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordSecondAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordThirdAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandDashAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandDashBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandFirstAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandParryBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandSecondAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandThirdAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordDashAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordDashBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordFirstAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordParryBehavior (1).cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordParryBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordSecondAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordThirdAttackBehavior.cpp" />
+    <ClCompile Include="Game\Object3D\Player\Behavior\PlayerBehaviorController.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -414,6 +467,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Game\Object3D\Player\Parts\PlayerLeftSword.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Object3D\Player\Parts\PlayerPartsController.cpp">
       <SubType>
       </SubType>
@@ -422,7 +479,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Game\Object3D\Player\Parts\PlayerSword.cpp">
+    <ClCompile Include="Game\Object3D\Player\Parts\PlayerRightSword.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -735,7 +792,59 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Game\Object3D\Player\Behavior\PlayerAttackBehavior.h">
+    <ClInclude Include="Game\Object3D\Player\Behavior\IPlayerBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyDashAttackBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyDashBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyFirstAttackBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyParryBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodySecondAttackBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\Body\PlayerBodyThirdAttackBehavior.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftHand\LeftHandThirdAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\LeftSword\LeftSwordThirdAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightHand\RightHandThirdAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordDashAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordDashBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordFirstAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordParryBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordSecondAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\Parts\RightSword\RightSwordThirdAttackBehavior.h" />
+    <ClInclude Include="Game\Object3D\Player\Behavior\PlayerBehaviorController.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -760,6 +869,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Game\Object3D\Player\Parts\PlayerLeftSword.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Game\Object3D\Player\Parts\PlayerPartsController.h">
       <SubType>
       </SubType>
@@ -768,7 +881,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Game\Object3D\Player\Parts\PlayerSword.h">
+    <ClInclude Include="Game\Object3D\Player\Parts\PlayerRightSword.h">
       <SubType>
       </SubType>
     </ClInclude>
